added delete user endpoint, added binding:required to user struct so the valued are actually required now
